force-app/main/default/objects/EconomicGroup__c/fields/ConsumoTotal__c.field-meta.xml
<CustomField>
    <fullName>ConsumoTotal__c</fullName>
    <label>Consumo Total (Kwh)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>