force-app/main/default/objects/EconomicGroup__c/fields/LeadQuantity__c.field-meta.xml
<CustomField>
    <fullName>LeadQuantity__c</fullName>
    <label>Quantidade de Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>