force-app/main/default/objects/EconomicGroup__c/fields/Leads_Desqualificados__c.field-meta.xml
<CustomField>
    <fullName>Leads_Desqualificados__c</fullName>
    <label>Leads Desqualificados</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>