force-app/main/default/objects/EconomicGroup__c/fields/Leads_Em_Andamento__c.field-meta.xml
<CustomField>
    <fullName>Leads_Em_Andamento__c</fullName>
    <label>Leads Em Andamento</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>