force-app/main/default/objects/EconomicGroup__c/fields/Pre_Leads_Convertidos__c.field-meta.xml
<CustomField>
    <fullName>Pre_Leads_Convertidos__c</fullName>
    <label>Pré Leads Convertidos</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>