force-app/main/default/objects/EconomicGroup__c/fields/Ultima_tarefa__c.field-meta.xml
<CustomField>
    <fullName>Ultima_tarefa__c</fullName>
    <label>Última tarefa</label>
    <type>Date</type>
</CustomField>